fix(social): center align icons

--- a/src/components/Social/_social.scss
+++ b/src/components/Social/_social.scss
@@ -18,6 +18,7 @@
   }
 
   ul {
+    align-items: center;
     display: flex;
     gap: 0 1.25rem;
     list-style: none;
